--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9dbc8c">  <td>22/06/25 15:11:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mts.liveupdate()[pri:0, instance:Mts@7205765b]">liveupdate</td> 
+<tr bgcolor="9dbc8c">  <td>22/07/01 15:40:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tools.backuputility()[pri:0, instance:Tools@1de76cc7]">backuputility</td> 
   <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>22/06/25 15:11:53</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mts.beforeMethod()[pri:0, instance:Mts@7205765b]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/07/01 15:40:40</td>   <td>-36</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tools.initialisewinium()[pri:0, instance:Tools@1de76cc7]">&gt;&gt;initialisewinium</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/07/01 15:41:10</td>   <td>29136</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Tools.teardownwinium()[pri:0, instance:Tools@1de76cc7]">&lt;&lt;teardownwinium</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
 </table>
